<resources>
    <string name="app_name">SenderosSeguros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario Loguedo</string>
    <string name="nav_header_subtitle">correoUsuario@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesion</string>

    <string name="menu_home">Home</string>
    <string name="menu_reporte">Informe de Obstaculos</string>
    <string name="menu_slideshow">Mapa</string>
    <string name="menu_reportar">Reportar Obstaculo</string>

    <string name="tv_ss"> SENDEROS\nSEGUROS </string>
    <string name="btn_ingresar"> INGRESAR </string>
    <string name="tv_registrarse"> No tenes cuenta? Registrate aqui </string>

    <string name="btn_registrar"> REGISTRARME </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="generar_button">GENERAR</string>
    <string name="rbBarrio">Generar por Barrio</string>
    <string name="rbObstaculo">Generar por obstáculo</string>
    <string name="rbTiempo">Generar por Tiempo</string>
    <string name="sp_barrio">Seleccione barrio</string>
    <string name="sp_tipo">Seleccione tipo de obstaculo</string>
    <string name="sp_periodo">Seleccione período</string>
    <string name="boton_volver">"Volver"</string>
</resources>