<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_reporte" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_reportar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Reportar Obstaculo" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Cerrar sesión" />
    </group>
</menu>