<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">
    <!--app:startDestination="@+id/nav_home"-->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.senderosseguros.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reporte"
        android:name="com.example.senderosseguros.ui.reporte.ReporteFragment"
        android:label="@string/menu_reporte"
        tools:layout="@layout/fragment_reporte" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.senderosseguros.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_reportar"
        android:name="com.example.senderosseguros.ui.reporte.ReportarFragment"
        android:label="Reportar Obstaculo"
        tools:layout="@layout/fragment_reportar" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.senderosseguros.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registrarFragment"
            app:destination="@id/registrarFragment" />
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/registrarFragment"
        android:name="com.example.senderosseguros.RegistrarFragment"
        android:label="fragment_registrar"
        tools:layout="@layout/fragment_registrar" >
        <action
            android:id="@+id/action_registrarFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

</navigation>
