<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6F4B5"
    tools:context=".ui.reporte.ReporteFragment">

    <!-- Botón Volver -->
    <ImageButton
        android:id="@+id/buttonVolver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/boton_volver"
        android:src="@drawable/ic_volver"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/text_reporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Informe de Obstáculos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonVolver" />

    <!-- Subtítulo, inicialmente invisible -->
    <TextView
        android:id="@+id/textUltimosTresMeses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reporte" />

    <!-- RadioGroup con Opciones y Spinners -->

    <!-- PieChart -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="354dp"
        android:layout_height="422dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reporte">

        <!-- RadioButton y Spinner para Barrio -->
        <RadioButton
            android:id="@+id/rbBarrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbBarrio"
            android:textColor="#121212"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerBarrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_background"
            android:padding="12dp" />

        <!-- RadioButton y Spinner para Obstáculo -->
        <RadioButton
            android:id="@+id/rbObstaculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rbObstaculo"
            android:textColor="#121212"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerObstaculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_background"
            android:padding="12dp" />

        <!-- RadioButton y Spinner para Tiempo -->
        <RadioButton
            android:id="@+id/rbTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rbTiempo"
            android:textColor="#121212"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_background"
            android:padding="12dp" />

    </RadioGroup>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_reporte"
        app:layout_constraintBottom_toTopOf="@+id/buttonGenerar" />

    <!-- Botón Generar Reporte -->
    <Button
        android:id="@+id/buttonGenerar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#2C3E50"
        android:padding="10dp"
        android:text="GENERAR"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
